tests/fixtures/invalid/bool_floordiv_set.py
# Cannot floor divide Bool and Set[int]
x: bool = True // {1, 2, 3}
